compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__assert_statement.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 1881
expression: assert 10 != 11
snapshot_kind: text
---
[
    Assert(
        Assert {
            location: SrcSpan {
                start: 0,
                end: 15,
            },
            value: BinOp {
                location: SrcSpan {
                    start: 7,
                    end: 15,
                },
                name: NotEq,
                name_location: SrcSpan {
                    start: 10,
                    end: 12,
                },
                left: Int {
                    location: SrcSpan {
                        start: 7,
                        end: 9,
                    },
                    value: "10",
                    int_value: 10,
                },
                right: Int {
                    location: SrcSpan {
                        start: 13,
                        end: 15,
                    },
                    value: "11",
                    int_value: 11,
                },
            },
            message: None,
        },
    ),
]
