compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__assign_left_hand_side_of_concat_pattern.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 628
expression: "\n        case \"\" {\n          first <> rest -> rest\n        }\n        "
snapshot_kind: text
---
----- SOURCE CODE

        case "" {
          first <> rest -> rest
        }
        

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:3:11
  │
3 │           first <> rest -> rest
  │           ^^^^^ This must be a string literal

We can't tell what size this prefix should be so we don't know
how to handle this pattern.

If you want to match one character consider using `pop_grapheme`
from the stdlib's `gleam/string` module.
