compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__attributes_with_improper_definition.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 831
expression: "\n@deprecated(\"1\")\n@external(erlang, \"module\", \"fun\")\n"
snapshot_kind: text
---
----- SOURCE CODE

@deprecated("1")
@external(erlang, "module", "fun")


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:1
  │  
2 │ ╭ @deprecated("1")
3 │ │ @external(erlang, "module", "fun")
  │ ╰──────────────────────────────────^ I was expecting a function definition after this
