compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__attributes_with_no_definition.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 800
expression: "\n@deprecated(\"1\")\n@target(erlang)\n"
snapshot_kind: text
---
----- SOURCE CODE

@deprecated("1")
@target(erlang)


----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:2:1
  │  
2 │ ╭ @deprecated("1")
3 │ │ @target(erlang)
  │ ╰───────────────^ I was expecting a definition after this
