compiler-core/main/__parse/parse/snapshots/gleam_core____parse__parse__tests__bare_expression.snap
---
source: compiler-core/src_refactored/__parse/parse/tests.rs
assertion_line: 651
expression: "1"
snapshot_kind: text
---
[
    Expression(
        Int {
            location: SrcSpan {
                start: 0,
                end: 1,
            },
            value: "1",
            int_value: 1,
        },
    ),
]
